cree carpeta styles.scss

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,245 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-/* menú */
-.header {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  background-color: blanchedalmond;
-  padding: 10px;
-  font-size: 26px;
-  height: 20vp;
-  cursor: pointer;
-}
-ul li {
-  display: inline-block;
-  margin: 10px;
-}
-
-li {
-  list-style: none;
-}
-
-a {
-  text-decoration: none;
-  color: black;
-}
-/* 
-/* INICIO */
-
-/* .main {
-    display: flex;
-    justify-content: flex-start; */
-
-.contenedor-grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 550px 60px;
-  grid-template-areas:
-    "hijo1 hijo2"
-    "hijo3 hijo3";
-  align-items: flex-start;
-}
-main {
-  background-color: beige;
-}
-
-.hijo1 {
-  flex-direction: column;
-  justify-content: flex-start;
-  margin-top: 40px;
-  margin-left: 15px;
-  font-size: 21px;
-  padding: 30px;
-  grid-area: hijo1;
-  height: 60vp;
-}
-.signos {
-  margin-top: 50px;
-  padding: 20px;
-  height: 400px;
-  width: 550px;
-}
-.sol {
-  margin-top: 40px;
-  padding: 30px;
-  width: 250px;
-  height: 250px;
-}
-
-.hijo2 {
-  flex-direction: column;
-  margin-top: 35px;
-  margin-left: 8px;
-  width: 85%;
-  height: 50%;
-  grid-area: hijo2;
-  height: 60vp;
-}
-p {
-  font-size: 25px;
-  color: rgb(36, 5, 65);
-}
-h1 {
-  margin-bottom: 30px;
-}
-
-/* .images2{
-    width: 400px;
-    height: 300px
-} */
-
-/* FOOTER */
-.hijo3 {
-  display: flex;
-  align-items: start;
-  padding: 20px;
-  background-color: burlywood;
-  grid-area: hijo3;
-  height: 20vp;
-}
-
-.imageLOGO {
-  display: flex;
-  margin-left: 5px;
-}
-.instagram {
-  display: flex;
-  padding: 20px;
-  width: 15px;
-  height: 15px;
-}
-
-@media (max-width: 700px) {
-  .contenedor-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 550px 60px;
-    grid-template-areas:
-      "hijo1 hijo2"
-      "hijo3 hijo3";
-  }
-}
-
-/*   .link1{
-    width: 3%;
-    height: 3%;
-   } */
-/*   .link2{
-    width: 40%;
-    height: 20%;
-    color:black
-   } */
-
-/* PAGINA 1 */
-
-.grid-container {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 500px 200px;
-  grid-template-areas:
-    "item1 item2"
-    "item3 item3";
-}
-
-.hijo {
-  background-color: beige;
-  color: black;
-  padding: 40px;
-  border-radius: 3px;
-}
-
-.item1 {
-  font-size: 25px;
-  margin-bottom: 30px;
-  display: flex;
-  flex-direction: column;
-  grid-area: item1;
-  height: 60vp;
-  
-}
-.título{
-  margin-bottom: 20px;
-}
-.item2 {
-  grid-area: item2;
-  height: 60vp;
-}
-.cartanatal {
-  width: 400px;
-  height: 350px;
-}
-.sistemasolar {
-  width: 700px;
-  height: 200px;
-}
-
-.item3 {
-  grid-area: item3;
-  height: 20vp;
-}
-@media (max-width: 700px) {
-  .contenedor-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 500px 200px;
-    grid-template-areas:
-      "item1 item2"
-      "item3 item3";
-  }
-}
-/* PÁGINA 2 */
-.laluna{
-  width:300px;
-  height:300px;
-}
-
-@media (max-width: 700px) {
-  .contenedor-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 500px 200px;
-    grid-template-areas:
-      "item1 item2"
-      "item3 item3";
-  }
-}
-
-/* PÁGINA 3 */
-.elascendente{
-  width: 300px;
-  height: 250px;
-}
-
-@media (max-width: 700px) {
-  .contenedor-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 500px 200px;
-    grid-template-areas:
-      "item1 item2"
-      "item3 item3";
-  }
-}
 
 
-/*PÁGINA 4 */
-/* .item2 {
-  width: 300px;
-  height: 300px;
-} */
-
-@media (max-width: 700px) {
-  .contenedor-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 500px 200px;
-    grid-template-areas:
-      "item1 item2"
-      "footer footer";
-  }
-}
+/*# sourceMappingURL=styles.css.map */
