--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,31 +1,34 @@
 /*comentario en css y scss*/ 
-//NESTING//
+//import variables 
+@use "utilidades/variables" as *;
+
 
 .header {
  display: flex;
   justify-content: space-around;
   align-items: center;
-  background-color: blanchedalmond;
+  background-color: $color-header blanchedalmond;
   padding: 10px;
-  font-size: 26px;
-  height: 20vp;
+  font-size: $font-size-header 26px;
+  height: 20vh;
   cursor: pointer;
-}
 
-ul li {
+
+ul {
+  li {
   display: inline-block;
   margin: 10px;
-}
-
-li {
   list-style: none;
-}
 
 a {
   text-decoration: none;
-  color: black;
+  color: $color-link black;
 }
-/* 
+  }
+}
+}
+
+
 /* INICIO */
 
 /* .main {
@@ -42,7 +45,7 @@ a {
   align-items: flex-start;
 }
 main {
-  background-color: beige;
+  background-color: $color-fondo-principal beige;
 }
 
 .hijo1 {
@@ -78,8 +81,8 @@ main {
   height: 60vp;
 }
 p {
-  font-size: 25px;
-  color: rgb(36, 5, 65);
+  font-size: $font-size-principal 25px;
+  color: $color-texto rgb(36, 5, 65);
 }
 h1 {
   margin-bottom: 30px;
@@ -95,7 +98,7 @@ h1 {
   display: flex;
   align-items: start;
   padding: 20px;
-  background-color: burlywood;
+  background-color: $color-footer burlywood;
   grid-area: hijo3;
   height: 20vp;
 }
@@ -151,7 +154,7 @@ h1 {
 }
 
 .item1 {
-  font-size: 25px;
+  font-size: $font-size-item1 25px;
   margin-bottom: 30px;
   display: flex;
   flex-direction: column;
