--- a/sass/utilidades/_variables.scss
+++ b/sass/utilidades/_variables.scss
@@ -10,5 +10,5 @@ $color-link: black;
 $font-size-principal: 25px;
 $font-size-header: 26px;
 $font-size-item1: 25px;
-
+$font-size-hijo1: 26px; 
 $padding-general: 20px;
