--- a/css/main.css
+++ b/css/main.css
@@ -44,7 +44,7 @@ main {
   font-size: 21px;
   padding: 30px;
   grid-area: hijo1;
-  height: 60vp;
+  height: 60vh;
 }
 
 .signos {
@@ -68,7 +68,7 @@ main {
   width: 85%;
   height: 50%;
   grid-area: hijo2;
-  height: 60vp;
+  height: 60vh;
 }
 
 p {
@@ -91,7 +91,7 @@ h1 {
   background-color: rgb(231, 186, 118);
   width: 100%;
   grid-area: hijo3;
-  height: 20vp;
+  height: 20vh;
 }
 
 .instagram {
@@ -123,8 +123,8 @@ h1 {
 .grid-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 650px 100px;
-  grid-template-areas: "item1 item2" "item3 item3";
+  grid-template-rows: 780px 50px;
+  grid-template-areas: "item1 item2" "imagen2 imagen2";
 }
 
 .hijo {
@@ -140,7 +140,8 @@ h1 {
   display: flex;
   flex-direction: column;
   grid-area: item1;
-  height: 60vp;
+  height: 60vh;
+  list-style-type: none;
 }
 
 .título {
@@ -149,7 +150,7 @@ h1 {
 
 .item2 {
   grid-area: item2;
-  height: 60vp;
+  height: 60vh;
 }
 
 .cartanatal {
@@ -157,24 +158,19 @@ h1 {
   height: 350px;
 }
 
-.sistemasolar {
-  width: 700px;
-  height: 200px;
+.imagen2 {
+  height: 70px;
   width: 100%;
-}
-
-.item3 {
-  grid-area: item3;
-  height: 20vp;
-  width: 100%;
+  grid-area: imagen2;
+  height: 20vh;
 }
 
 @media (max-width: 700px) {
-  .contenedor-grid {
+  .grid-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 650px 100px;
-    grid-template-areas: "item1 item2" "item3 item3";
+    grid-template-rows: 780px 50px;
+    grid-template-areas: "item1 item2" "imagen2 imagen2";
   }
 }
 /* PÁGINA 2 */
@@ -192,16 +188,21 @@ h1 {
   border-radius: 3px;
 }
 
+.item1 {
+  list-style-type: none;
+}
+
 .item3 {
-  font-size: 25px;
+  font-size: 15px;
   margin-bottom: 30px;
   display: flex;
   flex-direction: column;
-  grid-area: item5;
-  height: 60vp;
+  grid-area: item3;
+  height: 60vh;
 }
 
 .laluna {
+  margin-top: 70px;
   width: 300px;
   height: 300px;
 }
@@ -212,7 +213,7 @@ h1 {
 }
 
 @media (max-width: 700px) {
-  .contenedor-grid {
+  .grid-container1 {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 650px 100px;
