--- a/sass/style.scss
+++ b/sass/style.scss
@@ -162,21 +162,20 @@ h1 {
 .item2 {
   grid-area: item2;
   height: 60vh;
-
 }
 .cartanatal {
-  width: 400px;
-  height: 350px;
+  margin-top: 80px;
+  width: 500px;
+  height: 400px;
 }
-
 
 .imagen2 {
-    width: 500px;        
-    display: flex;  
-    grid-area: imagen2;
-    height:20vh;
+  display: grid;
+  width: 15%;
+  display: flex;
+  grid-area: imagen2;
+  height: 20vh;
 }
-
 
 @media (max-width: 700px) {
   .grid-container {
@@ -193,7 +192,7 @@ h1 {
 .grid-container1 {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 650px 50px;
+  grid-template-rows: 700px 100px;
   grid-template-areas:
     "item1 item2"
     "item3 item3";
@@ -203,9 +202,29 @@ h1 {
   color: black;
   padding: 40px;
   border-radius: 3px;
+  
 }
-.item1{
-  list-style-type: none;
+.item1 {
+  
+  grid-area: item1;
+  height: 40vh;
+}
+.item2{
+  grid-area: item2;
+  height: 40vh;
+}
+
+.laluna {
+ 
+  width: 300px;
+  height: 300px;
+  }
+
+
+.hijo .item3 {
+  background-color: burlywood;
+  width: 100%;
+ 
 }
 .item3 {
   font-size: 15px;
@@ -213,24 +232,15 @@ h1 {
   display: flex;
   flex-direction: column;
   grid-area: item3;
-  height: 60vh;
+  height: 10vh;
 }
 
-.laluna {
-  margin-top: 70px;
-  width: 300px;
-  height: 300px;
-}
-.hijo .item3 {
-  background-color: burlywood;
-  width: 100%;
-}
 
 @media (max-width: 700px) {
   .grid-container1 {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 650px 100px;
+    grid-template-rows: 700px 100px;
     grid-template-areas:
       "item1 item2"
       "item3 item3";
