--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,16 +1,15 @@
 /*comentario en css y scss*/
 //import variables
-@use "utilidades/_variables.scss" as *;
+@use "../sass/utilidades/variables" as *;
+@use "../sass/utilidades/mixin" as *;
 
 .header {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
   background-color: blanchedalmond;
   padding: 10px;
   font-size: 26px;
   height: 20vh;
   cursor: pointer;
+  @include flex;
 
   ul {
     li {
@@ -27,88 +26,9 @@
 }
 
 /* INICIO */
-
-/* .main {
-    display: flex;
-    justify-content: flex-start; */
-
-.contenedor-grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 650px 60px;
-  grid-template-areas:
-    "hijo1 hijo2"
-    "hijo3 hijo3";
-  align-items: flex-start;
-}
 main {
   background-color: beige;
-}
 
-.hijo1 {
-  flex-direction: column;
-  justify-content: flex-start;
-  margin-top: 40px;
-  margin-left: 15px;
-  font-size: 21px;
-  padding: 30px;
-  grid-area: hijo1;
-  height: 60vh;
-}
-.signos {
-  margin-top: 50px;
-  padding: 20px;
-  height: 350px;
-  width: 500px;
-}
-.sol {
-  margin-top: 40px;
-  padding: 30px;
-  width: 250px;
-  height: 250px;
-}
-
-.hijo2 {
-  flex-direction: column;
-  margin-top: 35px;
-  margin-left: 8px;
-  width: 85%;
-  height: 50%;
-  grid-area: hijo2;
-  height: 60vh;
-}
-p {
-  font-size: $font-size-principal 25px;
-  color: $color-texto rgb(36, 5, 65);
-}
-h1 {
-  margin-bottom: 30px;
-}
-
-/* .images2{
-    width: 400px;
-    height: 300px
-} */
-
-/* FOOTER */
-.hijo3 {
-  display: flex;
-  align-items: start;
-  background-color: rgb(231, 186, 118);
-  width: 100%;
-  grid-area: hijo3;
-  height: 20vh;
-}
-
-.instagram {
-  display: flex;
-  padding: 30px;
-  width: 25px;
-  height: 25px;
-  cursor: pointer;
-}
-
-@media (max-width: 700px) {
   .contenedor-grid {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -116,21 +36,81 @@ h1 {
     grid-template-areas:
       "hijo1 hijo2"
       "hijo3 hijo3";
+    align-items: flex-start;
+
+    .hijo1 {
+      flex-direction: column;
+      justify-content: flex-start;
+      margin-top: 40px;
+      margin-left: 15px;
+      font-size: 21px;
+      padding: 30px;
+      grid-area: hijo1;
+      height: 60vh;
+
+      .signos {
+        margin-top: 50px;
+        padding: 20px;
+        height: 350px;
+        width: 500px;
+
+        .sol {
+          margin-top: 40px;
+          padding: 30px;
+          width: 250px;
+          height: 250px;
+        }
+      }
+    }
+
+    .hijo2 {
+      flex-direction: column;
+      margin-top: 35px;
+      margin-left: 8px;
+      width: 85%;
+      height: 60vh;
+      grid-area: hijo2;
+
+      p {
+        font-size: $font-size-principal;
+        color: $color-texto;
+      }
+
+      h1 {
+        margin-bottom: 30px;
+      }
+    }
+
+    .hijo3 {
+      display: flex;
+      align-items: start;
+      background-color: rgb(231, 186, 118);
+      width: 100%;
+      grid-area: hijo3;
+      height: 20vh;
+
+      .instagram {
+        display: flex;
+        padding: 30px;
+        width: 25px;
+        height: 25px;
+        cursor: pointer;
+      }
+    }
+  }
+
+  @media (max-width: 700px) {
+    .contenedor-grid {
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 650px 60px;
+      grid-template-areas:
+        "hijo1 hijo2"
+        "hijo3 hijo3";
+    }
   }
 }
 
-/*   .link1{
-    width: 3%;
-    height: 3%;
-   } */
-/*   .link2{
-    width: 40%;
-    height: 20%;
-    color:black
-   } */
-
 /* PAGINA 1 */
-
 .grid-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -138,48 +118,47 @@ h1 {
   grid-template-areas:
     "item1 item2"
     "imagen2 imagen2";
-}
 
-.hijo {
-  background-color: beige;
-  color: black;
-  padding: 40px;
-  border-radius: 3px;
-}
+  .hijo {
+    background-color: beige;
+    color: black;
+    padding: 40px;
+    border-radius: 3px;
 
-.item1 {
-  font-size: 25px;
-  margin-bottom: 30px;
-  display: flex;
-  flex-direction: column;
-  grid-area: item1;
-  height: 60vh;
-  list-style-type: none;
-}
-.título {
-  margin-bottom: 20px;
-}
-.item2 {
-  grid-area: item2;
-  height: 60vh;
-}
-.cartanatal {
-  margin-top: 80px;
-  width: 500px;
-  height: 400px;
-}
+    .item1 {
+      font-size: 25px;
+      margin-bottom: 30px;
+      display: flex;
+      flex-direction: column;
+      grid-area: item1;
+      height: 60vh;
+      list-style-type: none;
 
-.imagen2 {
-  display: grid;
-  width: 15%;
-  display: flex;
-  grid-area: imagen2;
-  height: 20vh;
-}
+      .título {
+        margin-bottom: 20px;
+      }
+    }
 
-@media (max-width: 700px) {
-  .grid-container {
-    display: grid;
+    .item2 {
+      grid-area: item2;
+      height: 60vh;
+
+      .cartanatal {
+        margin-top: 80px;
+        width: 500px;
+        height: 400px;
+      }
+    }
+
+    .imagen2 {
+      display: flex;
+      grid-area: imagen2;
+      height: 20vh;
+      width: 15%;
+    }
+  }
+
+  @media (max-width: 700px) {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 800px 100px;
     grid-template-areas:
@@ -187,62 +166,25 @@ h1 {
       "imagen2 imagen2";
   }
 }
+
 /* PÁGINA 2 */
-
-.grid-container1 {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 700px 100px;
-  grid-template-areas:
-    "item1 item2"
-    "item3 item3";
-}
-.hijo {
-  background-color: beige;
-  color: black;
-  padding: 40px;
-  border-radius: 3px;
-  
-}
-.item1 {
-  
-  grid-area: item1;
-  height: 40vh;
-}
-.item2{
-  grid-area: item2;
-  height: 40vh;
-}
-
 .laluna {
- 
   width: 300px;
   height: 300px;
-  }
 
-
-.hijo .item3 {
-  background-color: burlywood;
-  width: 100%;
- 
-}
-.item3 {
-  font-size: 15px;
-  margin-bottom: 30px;
-  display: flex;
-  flex-direction: column;
-  grid-area: item3;
-  height: 10vh;
-}
-
-
-@media (max-width: 700px) {
-  .grid-container1 {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 700px 100px;
-    grid-template-areas:
-      "item1 item2"
-      "item3 item3";
+  .hijo {
+    .item3 {
+      background-color: burlywood;
+      width: 100%;
+      font-size: 15px;
+      margin-bottom: 30px;
+      display: flex;
+      flex-direction: column;
+      grid-area: item3;
+      height: 10vh;
+    }
   }
 }
+
+
+
