--- a/sass/utilidades/_variables.scss
+++ b/sass/utilidades/_variables.scss
@@ -1,7 +1,7 @@
 // paleta de coleres
-$color-fondo-principal: beige;
+$color-principal: beige;
 $color-footer: burlywood;
-$color-header: blanchedalmond;
+$color-header: burlywood;
 $color-texto: rgb(36, 5, 65);
 $color-link: black;
 
