--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,10 +1,14 @@
 /*comentario en css y scss*/
-//import variables
+/*Reset*/
+@use "base/reset" as *;
+
+//Variables//
+
 @use "../sass/utilidades/variables" as *;
 @use "../sass/utilidades/mixin" as *;
 
 .header {
-  background-color: blanchedalmond;
+  background-color: $color-header;
   padding: 10px;
   font-size: 26px;
   height: 20vh;
@@ -19,7 +23,7 @@
 
       a {
         text-decoration: none;
-        color: black;
+        color: $color-texto;
       }
     }
   }
@@ -27,7 +31,7 @@
 
 /* INICIO */
 main {
-  background-color: beige;
+  background-color: $color-principal;
 
   .contenedor-grid {
     display: grid;
@@ -47,6 +51,7 @@ main {
       padding: 30px;
       grid-area: hijo1;
       height: 60vh;
+      text-decoration: none;
 
       .signos {
         margin-top: 50px;
@@ -82,15 +87,15 @@ main {
     }
 
     .hijo3 {
-      display: flex;
+      @include flex;
       align-items: start;
-      background-color: rgb(231, 186, 118);
+      background-color: $color-footer;
       width: 100%;
       grid-area: hijo3;
       height: 20vh;
 
       .instagram {
-        display: flex;
+        @include flex;
         padding: 30px;
         width: 25px;
         height: 25px;
@@ -121,9 +126,8 @@ main {
 
   .hijo {
     background-color: beige;
-    color: black;
+
     padding: 40px;
-    border-radius: 3px;
 
     .item1 {
       font-size: 25px;
@@ -133,32 +137,32 @@ main {
       grid-area: item1;
       height: 60vh;
       list-style-type: none;
-
-      .título {
-        margin-bottom: 20px;
-      }
     }
-
     .item2 {
       grid-area: item2;
       height: 60vh;
 
+    
+
       .cartanatal {
         margin-top: 80px;
-        width: 500px;
-        height: 400px;
+        width: 350px;
+        height: 250px;
       }
-    }
-
-    .imagen2 {
-      display: flex;
-      grid-area: imagen2;
-      height: 20vh;
-      width: 15%;
     }
   }
 
-  @media (max-width: 700px) {
+
+  .imagen2 {
+    display: flex;
+    grid-area: imagen2;
+    height: 20vh;
+    width: 15%;
+  }
+}
+
+@media (max-width: 700px) {
+  .grid-container {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 800px 100px;
     grid-template-areas:
@@ -185,6 +189,3 @@ main {
     }
   }
 }
-
-
-
